--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -81,8 +81,7 @@
         <activity
             android:name=".activity.ProductDetailPageActivity"
             android:label="StoreFinder ProductDetailPage"
-            android:screenOrientation="portrait"
-            android:noHistory="true" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
