--- a/project.properties
+++ b/project.properties
@@ -11,6 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=..\\..\\Desktop\\adt-bundle-windows-x86-20131030\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.2=../../AndroidStudioProjectsResource/cropper-master/cropper
+target=android-18
+android.library.reference.1=../../../../Applications/ADT/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.2=../../Documents/android resource/cropper-master/cropper
