--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,8 @@
 
         <activity
             android:name=".activity.LoginPageActivity"
-            android:label="StoreFinder MainPage" >
+            android:label="StoreFinder MainPage"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,7 +45,8 @@
         </activity>
         <activity
             android:name=".activity.MainPageActivity"
-            android:label="StoreFinder MainPage" >
+            android:label="StoreFinder MainPage"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -72,8 +74,8 @@
         <activity
             android:name=".activity.StoreDetailPageActivity"
             android:label="StoreFinder StoreDetailPage"
-            android:screenOrientation="portrait"
-            android:noHistory="true">
+            android:noHistory="true"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -89,6 +91,14 @@
         <activity
             android:name=".activity.ImageCropperPageActivity"
             android:label="StoreFinder ImageCropperPage"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.ResultPageDetailActivity"
+            android:label="StoreFinder Resultpagedetail"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
